--- a/catalog.html
+++ b/catalog.html
@@ -116,30 +116,37 @@
           </div>
           <fieldset class="catalog-filter-fieldset">
     		    <legend class="catalog-filter_section-title">Производители:</legend>
-    		    <label class="catalog-filter_brand-name">
-                <input type="checkbox" name="check-option1" class="catalog-filter_brand-option" checked>Bosch
-            </label>
-    		    <label class="catalog-filter_brand-name">
-                <input type="checkbox" name="check-option2" class="catalog-filter_brand-option">Интерскол
-            </label>
-    		    <label class="catalog-filter_brand-name">
-                <input type="checkbox" name="check-option3" class="catalog-filter_brand-option" checked>Makita
-            </label>
-    		    <label class="catalog-filter_brand-name">
-                <input type="checkbox" name="check-option4" class="catalog-filter_brand-option">Dewalt
-             </label>
-    		    <label class="catalog-filter_brand-name">
-                <input type="checkbox" name="check-option5" class="catalog-filter_brand-option">Hitachi
-            </label>
+                <input type="checkbox" name="check-option1" class="catalog-filter_brand-option" id="boschoption" checked>
+    		    <label class="catalog-filter_brand-name" for="boschoption">
+                    <img src="img/checkbox-off.svg" width="27" height="23" alt="Кнопка неактивна" class="brand-checkbox-off">
+                    <img src="img/checkbox-on.svg" width="27" height="23" alt="Кнопка активна" class="brand-checkbox-on">Bosch</label>
+                <input type="checkbox" name="check-option2" class="catalog-filter_brand-option" id="interskoloption">
+    		    <label class="catalog-filter_brand-name" for="interskoloption">
+                    <img src="img/checkbox-off.svg" width="27" height="23" alt="Кнопка неактивна" class="brand-checkbox-off">
+                    <img src="img/checkbox-on.svg" width="27" height="23" alt="Кнопка активна" class="brand-checkbox-on">Интерскол</label>
+                <input type="checkbox" name="check-option3" class="catalog-filter_brand-option" id="makitaoption" checked>
+    		    <label class="catalog-filter_brand-name" for="makitaoption">
+                    <img src="img/checkbox-off.svg" width="27" height="23" alt="Кнопка неактивна" class="brand-checkbox-off">
+                    <img src="img/checkbox-on.svg" width="27" height="23" alt="Кнопка активна" class="brand-checkbox-on">Makita</label>
+                <input type="checkbox" name="check-option4" class="catalog-filter_brand-option" id="dewaltoption">
+    		    <label class="catalog-filter_brand-name" for="dewaltoption">
+                    <img src="img/checkbox-off.svg" width="27" height="23" alt="Кнопка неактивна" class="brand-checkbox-off">
+                    <img src="img/checkbox-on.svg" width="27" height="23" alt="Кнопка активна" class="brand-checkbox-on">Dewalt</label>
+                <input type="checkbox" name="check-option5" class="catalog-filter_brand-option" id="hitachioption">
+    		    <label class="catalog-filter_brand-name" for="hitachioption">
+                    <img src="img/checkbox-off.svg" width="27" height="23" alt="Кнопка неактивна" class="brand-checkbox-off">
+                    <img src="img/checkbox-on.svg" width="27" height="23" alt="Кнопка активна" class="brand-checkbox-on">Hitachi</label>
           </fieldset>
           <fieldset class="catalog-filter-fieldset">
     		    <legend class="catalog-filter_section-title">Питание:</legend>
-    		    <label class="catalog-filter_charge-name">
-                <input type="radio" name="charge" value="option1" class="catalog-filter_charging-option">Аккумуляторы
-            </label>
-    		    <label class="catalog-filter_charge-name">
-              <input type="radio" name="charge" value="option2" class="catalog-filter_charging-option">Сетевые
-            </label class="catalog-filter_charge-name">
+                <input type="radio" name="charge" value="option1" class="catalog-filter_charging-option" id="accumoption">
+    		    <label class="catalog-filter_charge-name" for="accumoption">
+                    <img src="img/radio-off.svg" width="25" height="25" alt="Кнопка неактивна" class="charge-radio-off">
+                    <img src="img/radio-on.svg" width="25" height="25" alt="Кнопка активна" class="charge-radio-on">Аккумуляторы</label>
+                <input type="radio" name="charge" value="option2" class="catalog-filter_charging-option" id="mainsoption">
+    		    <label class="catalog-filter_charge-name" for="mainsoption">
+                    <img src="img/radio-off.svg" width="25" height="25" alt="Кнопка неактивна" class="charge-radio-off">
+                    <img src="img/radio-on.svg" width="25" height="25" alt="Кнопка активна" class="charge-radio-on">Сетевые</label>
           </fieldset>
     		  <button class="catalog-button" type="submit">
             <span class="catalog-button-text">Показать</span>
@@ -154,10 +161,10 @@
                   <a href="#" title="По типу" class="catalog-sort_js-button">По типу</a>
                   <a href="#" title="По функционалу" class="catalog-sort_js-button">По функционалу</a>
                   <a href="/" title="По возрастанию" class="catalog-sort_js-button">
-                    <img src="icon-up-dir.svg" width="9" height="9" alt="По возрастанию">
+                    <img src="img/icon-up-dir.svg" width="9" height="9" alt="По возрастанию">
                   </a>
                   <a href="/" title="По убыванию" class="catalog-sort_js-button">
-                    <img src="icon-down-dir.svg" width="9" height="9" alt="По убыванию">
+                    <img src="img/icon-down-dir.svg" width="9" height="9" alt="По убыванию">
                   </a>
             </div>
     		<ul class="catalog-list">
@@ -195,7 +202,7 @@
              <a class="catalog-user-buy-button" href="#" title="Купить">Купить</a>
              <a class="catalog-user-bookmark-button" href="#" title="В закладки">В закладки</a>
            </div>
-           <img src="img/new-flag.svg" class="new-flag" width="20" height="20" alt="Новый товар">
+           <img src="img/new-flag.png" class="new-flag" width="60" height="60" alt="Новый товар">
      			</li>
      			<li class="catalog-item">
      				<a href="catalog-item.html" class="catalog-item-title" title="Перфоратор BOSCH BFG 3000">Перфоратор BOSCH BFG 3000</a>
@@ -220,7 +227,7 @@
               <a class="catalog-user-buy-button" href="#" title="Купить">Купить</a>
               <a class="catalog-user-bookmark-button" href="#" title="В закладки">В закладки</a>
             </div>
-            <img src="img/new-flag.svg" class="new-flag" width="20" height="20" alt="Новый товар">
+            <img src="img/new-flag.png" class="new-flag" width="60" height="60" alt="Новый товар">
      			</li>
      			<li class="catalog-item">
      				<a href="catalog-item.html" class="catalog-item-title" title="Перфоратор BOSCH BFG 2000">Перфоратор BOSCH BFG 2000</a>
@@ -244,7 +251,7 @@
               <a class="catalog-user-buy-button" href="#" title="Купить">Купить</a>
               <a class="catalog-user-bookmark-button" href="#" title="В закладки">В закладки</a>
             </div>
-            <img src="img/new-flag.svg" class="new-flag" width="20" height="20" alt="Новый товар">
+            <img src="img/new-flag.png" class="new-flag" width="60" height="60" alt="Новый товар">
      			</li>
      			<li class="catalog-item">
      				<a href="catalog-item.html" class="catalog-item-title" title="Перфоратор BOSCH BFG 6000">Перфоратор BOSCH BFG 6000</a>
@@ -361,9 +368,7 @@
         <button class="button continue-button" type="button">
           <span class="continue-button-text">Продолжить покупки</span>
         </button>
-        <button class="close-button" type="button">
-          <span class="close-button-text">Закрыть</span>
-        </button>
+        <button class="close-button" type="button" title="Закрыть"></button>
       </div>
     </section>
   </body>
