--- a/catalog.html
+++ b/catalog.html
@@ -30,7 +30,7 @@
         </div>
       </div>
 
-        <div class="header-center">
+        <div class="header-center container">
         	<p class="header_shop-main-title">Интернет-магазин строительных материалов и инструментов для ремонта</p>
         	<div class="header_adress">
         		<a class="header_adress-tel-number" href="tel:+78125550555" aria-label="Номер телефона магазина">+7 (812) 555-05-55</a>
@@ -57,7 +57,7 @@
             </div>
         </div>
 
-        <nav class="main-nav">
+        <nav class="main-nav container">
             <ul class="main-nav_list">
         		<li class="main-nav_list-item">
                 <a href="index.html" class="main-nav__list-item-link" title="Главная">Главная</a>
@@ -84,7 +84,7 @@
         </nav>
     </header>
 
-    <main>
+    <main class="container">
     	<ul class="breadcrumps">
     		<li class="breadcrumbs__item">
             <a href="index.html" class="breadcrumbs__item-link" title="Главная">
@@ -294,7 +294,7 @@
     </main>
 
     <footer class="main-footer">
-    	<div class="footer-top">
+    	<div class="footer-top container">
     		<a class="logo" href="index.html" title="Техномарт"><img src="img/logo.svg" width="111" height="18" alt="Логотип магазина «Техномарт»"></a>
             <ul class="footer-nav">
                 <li>
@@ -335,27 +335,33 @@
 
     	<div class="footer-bottom">
         <div class="container">
-    		  <p class="footer-copyright">© 2010-2019 Компания «Техномарт» </p>
-              <p class="footer-copyright"> Все права защищены</p>
-    	      <ul class="footer-social">
-     		      <li>
-                  <a class="social-button" href="#" title="Вконтакте">Вконтакте</a>
+          <p class="footer-copyright">© 2010-2019 Компания «Техномарт» </p>
+            <p class="footer-copyright"> Все права защищены</p>
+            <ul class="footer-social">
+              <li>
+                  <a class="social-button" href="#" title="Вконтакте" aria-label="Наша страница Вконтакте">
+                    <img src="img/vk-icon.svg" width="26" height="15" alt="Вконтакте">
+                  </a>
               </li>
-     		      <li>
-                  <a class="social-button" href="#" title="Фейсбук">Фейсбук</a>
+              <li>
+                  <a class="social-button" href="#" title="Фейсбук" aria-label="Наша страница в Фейсбуке">
+                    <img src="img/fb-icon.svg" width="12" height="22" alt="Фейсбук">
+                  </a>
               </li>
-     		      <li>
-                  <a class="social-button" href="#" title="Инстаграм">Инстаграм</a>
+              <li>
+                  <a class="social-button" href="#" title="Инстаграм" aria-label="Наш профиль в Инстаграме">
+                    <img src="img/insta-icon.svg" width="21" height="21" alt="Инстаграм">
+                  </a>
               </li>
-     	      </ul>
-    		  <div class="footer-bottom_academy">Обратная связь:
-                <a class="footer-bottom_academy-link" href="send-mail.html" title="mail@htmlacademy.ru">mail@htmlacademy.ru</a>
-           </div>
-    		  <div class="footer-bottom_academy">Разработано: 
+            </ul>
+          <div class="footer-bottom_academy">Обратная связь:
+              <a class="footer-bottom_academy-link" href="send-mail.html" title="mail@htmlacademy.ru">mail@htmlacademy.ru</a>
+          </div>
+          <div class="footer-bottom_academy">Разработано: 
               <a class="footer-bottom_academy-link" href="https://htmlacademy.ru" title="https://htmlacademy.ru/intensive/htmlcss">htmlacademy.ru</a>
           </div>
         </div>
-    	</div>
+      </div>
     </footer>
 
     <section class="modal modal-cart" id="modalcart_catalog">
