--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
              <button type="submit" name="submit-btn" class="header__search-form-button" aria-label="Кнопка поиска"></button>
     	      </form>
     	      <a class="header__user-button" href="#" title="Закладки">
-              <img src="img/icon-bookmark.svg" alt="Закладки" width="15" height="15">
+              <img src="img/icon-bookmark-darkgrey.svg" alt="Закладки" width="15" height="15">
               <span class="header__user-button-text">Закладки: </span>
               <output>0</output>
             </a>
             <a class="header__user-button" href="#" title="Корзина">
-              <img src="img/cart-icon.svg" alt="Корзина" width="15" height="15">
+              <img src="img/cart-icon-darkgrey.svg" alt="Корзина" width="15" height="15">
               <span class="header__user-button-text">Корзина: </span>
               <output>0</output>
             </a>
