--- a/catalog.html
+++ b/catalog.html
@@ -35,13 +35,20 @@
         		<p class="header_adress-adress">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
         	</div>
             <div class="header_user-info">
-                <div class="header_user-info-something">
+                <div class="header_user-info-div">
         	       <a class="header_profile-button" href="profile.html" title="Равшан Джамшутович">
-                    <img src="img/icon-user.svg" width="20" height="18" alt="Профиль пользователя">
+                    <svg class="profile-button-icon" xmlns="http://www.w3.org/2000/svg" width="20" height="18" viewBox="0 0 20 18">
+                        <path fill="#c5c5c5" d="M17.881 14.166c-2.144-.735-4.256-1.666-5.207-2.39-.657-.501-.77-1.618-.517-2.415 1.118-.903 1.864-2.477 1.864-4.278C14.021 2.276 12.221 0 10 0S5.979 2.276 5.979 5.083c0 1.801.746 3.374 1.863 4.277.253.798.141 1.915-.517 2.416-.95.724-3.063 1.654-5.207 2.39S0 18 0 18h20s.025-3.099-2.119-3.834z"/>
+                    </svg>
                     <span class="header_profile-button-name">Равшан Джамшутович</span>
                    </a>
                    <a class="header_sign-out-button" href="sign-out.html" title="Выйти">
-                     <img src="img/icon-logout.svg" width="20" height="17" alt="Выйти">
+                     <svg class="sign-out-button-icon" xmlns="http://www.w3.org/2000/svg" width="21" height="17" viewBox="0 0 21 17">
+                         <g fill="#c5c5c5">
+                             <path d="M21 8.5L12.125 0v6h-6v5h6v6z"/>
+                             <path d="M3.106 13.952V3.048c.018-.376.171-1.057 1.01-1.057h5.027V0H4.116C1.938 0 1.112 1.81 1.087 3.027v10.946C1.112 15.189 1.938 17 4.116 17h5.027v-1.99H4.116c-.839 0-.992-.683-1.01-1.058z"/>
+                         </g>
+                     </svg>
                    </a>
                 </div>
                 <ul class="header_user-info-list">
@@ -83,10 +90,15 @@
     </header>
 
     <main class="container">
-    	<ul class="breadcrumps">
+    	<ul class="breadcrumbs">
     		<li class="breadcrumbs__item">
             <a href="index.html" class="breadcrumbs__item-link" title="Главная">
-                <img src="img/icon-home.svg" width="14" height="12" alt="Главная">
+                <svg class="breadcrumbs-icon-home" xmlns="http://www.w3.org/2000/svg" width="15" height="12" viewBox="0 0 15 12">
+                    <g fill="#C1C6CE">
+                        <path d="M3 8v4h4V8h2v4h4V8L8 3.516z"/>
+                        <path d="M14.831 6.365L13 4.751V0h-2v2.987L8.332.635c-.02-.017-.043-.023-.064-.037a.465.465 0 0 0-.08-.047.551.551 0 0 0-.095-.024C8.062.521 8.032.515 8 .515c-.031 0-.061.006-.092.012a.46.46 0 0 0-.095.025c-.028.011-.053.029-.08.046-.021.014-.045.02-.064.037l-6.498 5.73a.501.501 0 0 0 .33.875.497.497 0 0 0 .331-.125L8 1.677l6.169 5.438a.501.501 0 0 0 .662-.75z"/>
+                    </g>
+                </svg>
             </a>
         </li>
     		<li class="breadcrumbs__item">
@@ -95,7 +107,7 @@
     		<li class="breadcrumbs__item">
             <a href="#" class="breadcrumbs__item-link" title="Инструмент">Инструмент</a>
         </li>
-    		<li class="breadcrumps-current breadcrumbs__item">Перфораторы</li>
+    		<li class="breadcrumbs-current breadcrumbs__item">Перфораторы</li>
     	</ul>
     	<h1 class="page-title">Перфораторы</h1>
 
@@ -104,12 +116,16 @@
           <h3 class="catalog-filter-title">Фильтр:</h3>
           <div class="catalog-filter-price">
     		    <h4 class="catalog-filter_section-title">Цена:</h4>
-            <img class="filter-button-first" src="img/filter-button.svg" width="20" height="22" alt="Ползунок">
-            <div class="catalog-filter-price_graystripe"></div>
-            <div class="catalog-filter-price_greenstripe"></div>
-            <img class="filter-button-second" src="img/filter-button.svg" width="20" height="22" alt="Второй ползунок">
+                <div class="catalog-filter-price_rectangle">
+                    <img class="filter-button-first" src="img/filter-button.svg" width="20" height="22" alt="Ползунок">
+                    <div class="catalog-filter-price_graystripe"></div>
+                    <div class="catalog-filter-price_greenstripe"></div>
+                    <img class="filter-button-second" src="img/filter-button.svg" width="20" height="22" alt="Второй ползунок">
+                </div>
             <div class="catalog-filter-price-range">
-              <input type="text" name="min-price" class="price-range" value="0"> — <input type="text" name="max-price" class="price-range" value="30000">
+              <input type="text" name="min-price" class="price-range" value="0">
+              <span class="simple-dash"> — </span>
+              <input type="text" name="max-price" class="price-range" value="30000">
             </div>
           </div>
           <fieldset class="catalog-filter-fieldset">
@@ -158,11 +174,15 @@
                   <a href="#" title="По цене" class="catalog-sort_js-button">По цене</a>
                   <a href="#" title="По типу" class="catalog-sort_js-button">По типу</a>
                   <a href="#" title="По функционалу" class="catalog-sort_js-button">По функционалу</a>
-                  <a href="/" title="По возрастанию" class="catalog-sort_js-button">
-                    <img src="img/icon-up-dir.svg" width="9" height="9" alt="По возрастанию">
+                  <a href="/" title="По возрастанию" class="catalog-sort_js-button triangle-button">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="11" height="10" viewBox="0 0 11 10">
+                        <path fill="#231F20" d="M5.5 0L0 10h11z"/>
+                    </svg>
                   </a>
-                  <a href="/" title="По убыванию" class="catalog-sort_js-button">
-                    <img src="img/icon-down-dir.svg" width="9" height="9" alt="По убыванию">
+                  <a href="/" title="По убыванию" class="catalog-sort_js-button triangle-button">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="11" height="10" viewBox="0 0 11 10">
+                        <path fill="#231F20" d="M5.5 10L0 0h11"/>
+                    </svg>
                   </a>
             </div>
     		<ul class="catalog-list">
